--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
   <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 </head>
 
-<body>
 <!-- Self-drawing SVGs -->
 <div id="lineDrawing">
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="200px" height="56px" viewBox="0 0 200 56" preserveAspectRatio="xMidYMid meet" id="swirl1" class="swirl"  >
@@ -154,6 +153,8 @@
 <h1 class="greatVibes">
   <span class="letter">M</span><span class="letter">a</span><span class="letter">r</span><span class="letter">i</span><span class="letter">a</span> <span class="letter">K</span><span class="letter">i</span><span class="letter">l</span><span class="letter">s</span><span class="letter">v</span><span class="letter">e</span><span class="letter">d</span>
 </h1>
+
+<div style="height: 500px; width: 500px; background-color: teal;"></div>
 
 </body>
 </html>
